@@ -1,21 +1,23 @@
 package de.uol.swp.server.connection;
 
+import de.uol.swp.common.city.CityName;
 import de.uol.swp.common.connectiom.ConnectionDTO;
 import de.uol.swp.common.connectiom.IConnectionDTO;
-import de.uol.swp.server.city.CityName;
+import lombok.NoArgsConstructor;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@NoArgsConstructor(access = lombok.AccessLevel.PRIVATE)
 public class ConnectionMapper {
 
     public static IConnectionDTO toDTO(Connection connection) {
-        return new ConnectionDTO(connection.getId(),
+        return new ConnectionDTO(
+                connection.getId(),
                 connection.getCityNames()
                           .stream()
                           .map(CityName::getDisplayName)
-                          .collect(Collectors.toList()),
+                          .toList(),
                 connection.isTrainTrack(),
                 connection.isTrainTrackBuildable()
         );
@@ -24,11 +26,12 @@ public class ConnectionMapper {
     public static List<IConnectionDTO> toDTOList(List<Connection> connections) {
         List<IConnectionDTO> connectionDTOS = new ArrayList<>();
         for (Connection connection : connections) {
-            ConnectionDTO connectionDTO = new ConnectionDTO(connection.getId(),
+            ConnectionDTO connectionDTO = new ConnectionDTO(
+                    connection.getId(),
                     connection.getCityNames()
                               .stream()
                               .map(CityName::getDisplayName)
-                              .collect(Collectors.toList()),
+                              .toList(),
                     connection.isTrainTrack(),
                     connection.isTrainTrackBuildable()
             );
